# deepread

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  LICENSE.txt  MANIFEST.in  PM.md  README.md  build.py  build_old.py  docker-compose.yml  docker-entrypoint.sh  forge.config.js  index.html  main.js  main.py  npm-package.json  package-lock.json  package.json  preload.js  publish.py  pyproject.toml  setup.py
.github/workflows/: release.yml
app/: forge.config.js  main.js  package-lock.json  package.json  preload.js
backend/: .env.example  __init__.py  build.py  build_binary.py  build_hooks.py  cli.py  main.js  main.py  package-lock.json  package.json  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/icon/macos/: icon.icns
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Chat.jsx  TopBar.jsx
frontend/src/contexts/: SettingsContext.jsx
frontend/src/pages/: Upload.jsx  Viewer.jsx
frontend/src/utils/: providerUtils.js
scripts/: notarize.js
viewer/: index.html
