[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepread"
version = "0.1.0"
description = "A PDF reading and analysis application"
readme = "README.md"
authors = [
    {name = "Ngoc Khuat", email = "qn.khuat@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]==0.115.8",
    "openai==1.65.2",
    "pymupdf==1.25.3",
    "pymupdf4llm==0.0.17"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/qnkhuat/deepread"

[tool.setuptools]
packages = ["backend"]
include-package-data = true

[tool.setuptools.package-data]
backend = ["../frontend/dist/**/*"]

[project.scripts]
deepread = "backend.cli:main"

[tool.isort]
profile = "black"
multi_line_output = 3
